@@ -16,6 +16,7 @@ UPDATED FUNCTIONS:
     Vilmantas Gegzna).
   * TMod() will report number of variables in the model and the
     number of estimated coefficients.
+  * tol in UnirootAll has been decreased as the default was too coarse.  
     
 BUGFIXES:
   * PasswordDlg() gets all its required arguments back again.    
